{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "fbd9fb3e-e5a1-4243-855d-ee8ea4491990",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "889a74d1-3be8-49c6-9141-1bc926ff05d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerJump",
                    "type": "Value",
                    "id": "cd572515-50de-4a74-a820-f7955ae35dce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "4e5ddf7b-1bc6-4cf0-8cfc-de3d2b221d15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "b49dc406-e571-4c58-9902-20d7f2c1b15b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hotbar",
                    "type": "Value",
                    "id": "323f4a61-077c-4559-87c7-2cbbaba4c26a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Value",
                    "id": "cf774308-c242-4071-9c96-b6c6b8bb2459",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "wasd",
                    "id": "21ebf972-7a60-44dd-b9e7-bb5c84c7487b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6ef3f40d-dcd7-4844-a07a-1d44c5b907bc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "466b3306-9b45-4d22-a59f-3e4b5cb20c19",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "63a993ab-e2db-47e6-8a02-c18965b44510",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6777f9a4-9604-4305-92c5-6e7daf6a9b74",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "857876eb-96ce-45e6-a361-c8f24465fa47",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "347482d2-e436-4e38-b583-9c6629c56e78",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30246705-7953-49e4-a4a9-968105c5b2a8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d41d44e-ba69-414a-8487-21fc48792a7d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f4be7d6-6100-4679-896e-1896d5e5f3d9",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff682136-6239-49c4-9bf0-fea331b099bd",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ae1d4f9-a93c-48ea-8fc7-fcdd23129897",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b886c84-9290-4d05-88a7-f902e576ad93",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "754da9e7-c1ee-4497-aa4c-1e9b679226a2",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "Scale(factor=6)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eaf1b9f8-ac9c-4919-a0ea-079a2dab96af",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "Scale(factor=7)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11a6de91-6eee-4676-a27c-714c964cd7f0",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "Scale(factor=8)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e1b5710-e943-4c53-8a77-35f96e686a14",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "Scale(factor=9)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04b219f5-274d-4a21-843f-48e268284316",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "Scale(factor=0)",
                    "groups": "",
                    "action": "Hotbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4be4bc72-6d75-4a65-9df3-df8e7a5ca2c4",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}